--- a/style.css
+++ b/style.css
@@ -1,32 +1,74 @@
 
-#main {
+body {
+    margin: 0;
+    min-height: 100vh;
     display:flex;
-    justify-content: center;
-    align-items: center;
     flex-direction: column;
 }
 
+.header {
+  height: 72px;
+  background: gray;
+  font-size: 32px;
+  font-weight: 900;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.footer {
+  height: 72px;
+  background-color: gray;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#main {
+    display:flex;
+    flex: 1;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: rgb(24, 165, 201);
+}
+
 #btnContainer {
-    justify-content: space-between;  
+    justify-content: space-between; 
+    background-color: gray;
+    border: solid;
+    display: flex;
+    height: 100px;
+    width: 600px;
 }
 
 #resultContainer{
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: gray;
+    border: solid;
     flex-direction: column;
+    height: 100px;
+    width: 600px;
 }
 
 #scoreContainer{
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: gray;
+    border: solid;
     flex-direction: column;
+    height: 100px;
+    width: 600px;
 }
 
-/*
-.button img{
-    width:150px;
-    height:150px;
+.button {
+    background-color: gray;
+    width: 150px;
+    border: solid;
+
 }
-*/
+
+
