--- a/style.css
+++ b/style.css
@@ -35,8 +35,7 @@ body {
 
 #btnContainer {
     justify-content: space-between; 
-    background-color: gray;
-    border: solid;
+    background-color: (24, 165, 201);
     display: flex;
     height: 100px;
     width: 600px;
@@ -51,6 +50,7 @@ body {
     flex-direction: column;
     height: 100px;
     width: 600px;
+    margin-top: 50px;
 }
 
 #scoreContainer{
@@ -62,13 +62,28 @@ body {
     flex-direction: column;
     height: 100px;
     width: 600px;
+    margin-top: 50px;
 }
 
 .button {
     background-color: gray;
     width: 150px;
     border: solid;
-
 }
 
+#reloadContainer {
+    display: flex;
+    justify-content: center;
+    background-color: gray;
+    border: solid;
+    height: 50px;
+    width: 125px;
+    margin-top: 50px;
+}
+
+#reload {
+    background-color: gray;
+    height: 50px;
+    width: 125px;
+}
 
